Compiler/tests/typing/bad/testfile-arith-1.rs
fn main() { 1 + true; }
